--- a/style.css
+++ b/style.css
@@ -24,17 +24,17 @@ body {
   text-align: center;
   margin: 10px auto;
   width: 500px;
-  padding: 0 24px;
+  padding: 24px 24px;
   border-radius: 5px;
 }
 
 .links-cta {
   width: 500px;
-  margin: 10px auto;
+
   font-size: medium;
 }
 h1 {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', Arial, sans-serif;
   font-size: 2em;
   font-weight: bold;
   margin-block-start: 0.67em;
@@ -45,21 +45,23 @@ h1 {
 }
 
 h2 {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', Arial, sans-serif;
   font-weight: normal;
   font-size: medium;
-}
-
-h2 {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-  font-weight: normal;
-  font-size: small;
 }
 
 ul {
   padding: 0;
 }
 
+.list-inline i {
+  font-size: 30px;
+  color: black;
+}
+
+.list-inline i:hover {
+  color: grey;
+}
 li {
   display: inline-block;
   padding: 2%;
@@ -73,4 +75,29 @@ li:hover {
   width: 120px;
   height: 120px;
   border-radius: 50%;
+}
+
+/* Custom design with class (99% of your design) */
+.container {
+  width: 700px;
+  margin: 40px auto;
+}
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .container {
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 300px;
+  }
 }
